# CUDA_Matrix_Multiplication

./: .gitattributes  .gitignore  3_GNU_Make_Installed.txt  CMakeLists.txt  GIT_SETUP_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README.txt  SETUP_WINDOWS.md  SETUP_WINDOWS.txt  SPECIFICATION.txt  build_with_cmake.cmd  build_with_make.cmd  setup_git.cmd  use_cuda12.cmd  validate_env.cmd
include/: kernels.h  utils.h
python/: benchmark_plot.py  roofline.py
results/: REPORT.md  SLIDES.txt  bench.json  benchmark_data.json
src/: benchmark.cu  kernel_cublas.cu  kernel_v1_naive.cu  kernel_v2_tiled.cu  kernel_v3_register.cu
tests/: test_correctness.cu
